# znvs

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
example/: examples.ipynb
script/: build_reference_app.sh  hexdump2bin.sh  run_pytest.sh  run_reference_app.sh
scripts/: args.txt  build_reference_app.sh  run_reference_app.sh
src/znvs/: ate.py  decoder.py  encoder.py  entry.py  nvs.py  requirements.txt
test/: .gitignore  README.md
test/.west/: config
test/golden_samples/: sample_00.yml  sample_01.yml  sample_02.yml  sample_03.yml
test/pytest/: .gitignore  ate_test.py  decoder_test.py  decoding_test.py  encoding_test.py  sample_descriptor.py  sector_test.py
test/reference_app/: CMakeLists.txt  main.c  nvs_shell.c  prj.conf  west.yml
znvs/: ate.py  decoder.py  encoder.py  entry.py  exception.py  nvs.py  sector.py
